// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render LokiQueryEditor with legend should render 1`] = `
<LokiQueryField
  ExtraFieldElement={
    <React.Fragment>
      <LokiOptionFields
        lineLimitValue=""
        onChange={[MockFunction]}
        onRunQuery={[MockFunction]}
        query={
          Object {
            "expr": "",
            "legendFormat": "My Legend",
            "refId": "A",
          }
        }
        queryType="range"
        resolution={1}
        runOnBlur={true}
      />
      <div
        className="gf-form-inline"
      >
        <div
          className="gf-form"
        >
          <FormLabel
            tooltip="Controls the name of the time series, using name or pattern. For example
        {{hostname}} will be replaced with label value for the label hostname. The legend only applies to metric queries."
            width={6}
          >
            Legend
          </FormLabel>
          <input
            className="gf-form-input"
            onBlur={[MockFunction]}
            onChange={[Function]}
            placeholder="legend format"
            type="text"
            value="My Legend"
          />
        </div>
      </div>
    </React.Fragment>
  }
  data-testid="loki-editor"
  datasource={Object {}}
  history={Array []}
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
  onRunQuery={[MockFunction]}
  query={
    Object {
      "expr": "",
      "legendFormat": "My Legend",
      "refId": "A",
    }
  }
  range={
    Object {
      "from": "2020-01-01T00:00:00.000Z",
      "to": "2020-01-02T00:00:00.000Z",
    }
  }
/>
`;

exports[`Render LokiQueryEditor with legend should update timerange 1`] = `
<LokiQueryField
  ExtraFieldElement={
    <React.Fragment>
      <LokiOptionFields
        lineLimitValue=""
        onChange={[MockFunction]}
        onRunQuery={[MockFunction]}
        query={
          Object {
            "expr": "",
            "legendFormat": "My Legend",
            "refId": "A",
          }
        }
        queryType="range"
        resolution={1}
        runOnBlur={true}
      />
      <div
        className="gf-form-inline"
      >
        <div
          className="gf-form"
        >
          <FormLabel
            tooltip="Controls the name of the time series, using name or pattern. For example
        {{hostname}} will be replaced with label value for the label hostname. The legend only applies to metric queries."
            width={6}
          >
            Legend
          </FormLabel>
          <input
            className="gf-form-input"
            onBlur={[MockFunction]}
            onChange={[Function]}
            placeholder="legend format"
            type="text"
            value="My Legend"
          />
        </div>
      </div>
    </React.Fragment>
  }
  data-testid="loki-editor"
  datasource={Object {}}
  history={Array []}
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
  onRunQuery={[MockFunction]}
  query={
    Object {
      "expr": "",
      "legendFormat": "My Legend",
      "refId": "A",
    }
  }
  range={
    Object {
      "from": "2019-01-01T00:00:00.000Z",
      "to": "2020-01-02T00:00:00.000Z",
    }
  }
/>
`;
